# conductor-test

./: .dockerignore  .envrc  .gitignore  README.md  app.Dockerfile  base.Dockerfile  docker-compose.yml  localbuild.sh  localrun.sh  pyproject.toml
.codex/: config.toml
docs/: mcp_strategy.md
src/mcp_doc_server/: __init__.py  http_app.py  server.py
src/mcp_doc_server/data/: tool_docs.json
