[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mcp-doc-server"
version = "0.1.0"
description = "FastMCP server for off-the-shelf tooling documentation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_doc_server"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_doc_server/data/tool_docs.json" = "mcp_doc_server/data/tool_docs.json"
